fix win dialog dark mode

--- a/assets/css/app-dark.css
+++ b/assets/css/app-dark.css
@@ -42,6 +42,13 @@ body.dark-mode {
     background-color: var(--dark-color);
   }
 
+  body.dark-mode .song-win-block {
+    background-color: var(--black);
+  }
+    .song-win-block .song-misc {
+      background-color: var(--marker-color);
+    }
+
   body.dark-mode section#game #top-half #guesses-container .guess {
     color: var(--white);
   }
